fix: add yarn resolution for ip package to address security vulnerability
- Add resolution for ip package to ensure version ^1.1.9 is used
- Addresses Dependabot alert for CVE-2024-29415 (incomplete fix for CVE-2023-42282)
- ip package is used by @react-native-community/cli dev tools
- This ensures we're using the latest available version until upstream fix is released

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "resolutions": {
     "metro": "^0.76.8",
-    "metro-cache-key": "^0.76.8"
+    "metro-cache-key": "^0.76.8",
+    "ip": "^1.1.9"
   }
 }
